--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "inspect:prod": "vue inspect --mode=production > dist/webpack.prod.js"
   },
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "^0.26.1",
     "core-js": "^3.6.4",
     "jquery": "1.12",
     "vue": "^2.6.11",
+    "vue-jstree": "^2.1.6",
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
