--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jquery": "1.12",
     "vue": "^2.6.11",
     "vue-jstree": "^2.1.6",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "vue-tree-list": "^1.5.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.0",
