chore: 根据是否存在 `VUE_APP_PROXY` 环境变量，添加 API 代理配置

--- a/.env.development
+++ b/.env.development
@@ -7,6 +7,9 @@ port = 9600
 # base api
 VUE_APP_BASE_API = '/api'
 
+# NestServer-Template
+VUE_APP_PROXY = http://localhost:10300
+
 # version
 VUE_APP_VERSION = 1000
 
