--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-pre-dev",
-  "description": "Vue 组件预研",
+  "description": "Vue 预研",
   "version": "0.5.0",
   "private": true,
   "scripts": {
@@ -12,11 +12,7 @@
     "inspect:prod": "vue inspect --mode=production > dist/webpack.prod.js"
   },
   "dependencies": {
-    "axios": "^0.26.1",
-    "core-js": "^3.6.4",
-    "jquery": "1.12",
     "vue": "^2.6.11",
-    "vue-jstree": "^2.1.6",
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
